@@ -1,0 +1,27 @@
+.TH "VIFM-SCREEN-SPLIT" "1" "October 27, 2015" "vifm 0.8"
+.\" ---------------------------------------------------------------------------
+.SH "NAME"
+.\" ---------------------------------------------------------------------------
+vifm-screen-split \- a vifm helper script to run in GNU screen split
+.\" ---------------------------------------------------------------------------
+.SH "SYNOPSIS"
+.\" ---------------------------------------------------------------------------
+Only called automagically from within vifm
+.LP
+vifm-screen-split
+.\" ---------------------------------------------------------------------------
+.SH "DESCRIPTION"
+.\" ---------------------------------------------------------------------------
+A helper script for vifm, not for standalone use.
+.LP
+Prints "Press any key to close this region..." message and waits to close the
+split.
+.\" ---------------------------------------------------------------------------
+.SH "SEE ALSO"
+.\" ---------------------------------------------------------------------------
+.BR screen (1),
+.BR vifm (1)
+.\" ---------------------------------------------------------------------------
+.SH "AUTHOR"
+.\" ---------------------------------------------------------------------------
+This manual page was written by xaizek <xaizek@openmailbox.org>.
